[package]
name = "discord_qc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
csv = "1.3.1"
dashmap = "6.1.0"
dotenv = "0.15.0"
octocrab = "0.44.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-cache-inmemory = "0.16.0"
twilight-gateway = { version = "0.16.0", features = ["simd-json", "zlib-simd"] }
twilight-gateway-queue = "0.16.0"
twilight-http = "0.16.0"
twilight-interactions = "0.16.2"
twilight-mention = "0.16.0"
twilight-model = "0.16.0"
twilight-standby = "0.16.0"
twilight-util = { version = "0.16.0", features = [
    "builder",
    "permission-calculator",
] }
